[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/ending.gd" type="Script" id=1]
[ext_resource path="res://art/ending.png" type="Texture" id=2]
[ext_resource path="res://fonts/danielbk.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://fonts/ANUDI___.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://fonts/ArchitectsDaughter.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]

size = 40
use_mipmaps = true
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="Animation" id=2]

resource_name = "typing"
length = 8.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible_characters")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3, 4.5, 7.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0, 22, 23, 50 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:max_lines_visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 4.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 2 ]
}

[sub_resource type="DynamicFont" id=3]

size = 60
use_mipmaps = false
use_filter = false
font_data = ExtResource( 4 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=4]

size = 20
use_mipmaps = true
use_filter = true
font_data = ExtResource( 5 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="Animation" id=5]

length = 4.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2, 4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Ending Slide" type="ColorRect" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0, 0, 0, 1 )
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="." index="0"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -511.0
margin_top = 70.0
margin_right = 512.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
use_top_left = false
_sections_unfolded = [ "Anchor", "Margin" ]

[node name="Control" type="Control" parent="CenterContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 511.0
margin_right = 511.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="Sprite" type="Sprite" parent="CenterContainer/Control" index="0"]

visible = false
position = Vector2( -20, -20 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Material", "Visibility" ]

[node name="handwritten" type="Label" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = 30.0
margin_top = 30.0
margin_right = -30.0
margin_bottom = 166.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "Yep, that's gotta be it... 
That's how he got away with..."
autowrap = true
percent_visible = 0.961538
lines_skipped = 0
max_lines_visible = 2
_sections_unfolded = [ "Margin", "custom_fonts" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="handwritten" index="0"]

root_node = NodePath("..")
autoplay = "typing"
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/typing = SubResource( 2 )
blend_times = [  ]

[node name="THE_PHOENIX_SAPPHIRE" type="Label" parent="." index="2"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = 6.0
margin_right = -2.0
margin_bottom = 140.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_shadow = Color( 0.67451, 0.0862745, 0.988235, 1 )
text = "THE PHOENIX SAPPHIRE"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin", "Material", "Visibility", "custom_colors" ]

[node name="continue_prompt" type="Label" parent="." index="3"]

modulate = Color( 1, 1, 1, 0 )
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -232.0
margin_top = -48.0
margin_right = -21.0
margin_bottom = -12.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 4 )
text = "Click to continue"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Visibility", "custom_fonts" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="continue_prompt" index="0"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/appear = SubResource( 5 )
blend_times = [  ]

[connection signal="animation_finished" from="handwritten/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]


